# zhunters

./: .gitignore  Cargo.toml  LICENSE  README.md  profile.sh
.github/workflows/: ci.yml
docs/: scoring-optimization-report.md
scripts/: tune_delta_linking_constants.sh  tune_scoring_constants.sh
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  output.rs  record.rs  scoring.rs  sequence.rs
tests/: cli.rs
tests/fixtures/: nc_043715_128k.fa
tests/fixtures/expected/: zhunt_10_133_133.Z-SCORE  zhunt_11_194_194.Z-SCORE  zhunt_12_265_388.Z-SCORE  zhunt_1_1_1.Z-SCORE  zhunt_2_2_2.Z-SCORE  zhunt_3_4_4.Z-SCORE  zhunt_4_6_8.Z-SCORE  zhunt_5_14_11.Z-SCORE  zhunt_6_21_23.Z-SCORE  zhunt_7_38_38.Z-SCORE  zhunt_8_76_66.Z-SCORE  zhunt_9_94_94.Z-SCORE
