[package]
name = "zhunters"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the Z-HUNT-3 z-DNA scanner"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
physical_constants = "0.5.0"
rustc-hash = "2.1"

[[bin]]
name = "zhunt"
path = "src/main.rs"

[profile.release]
lto = "fat"
